nav bar now fixed postion, need to sort out spacing still

--- a/_components.scss
+++ b/_components.scss
@@ -1,14 +1,17 @@
 .navigation {
     height: 77px;
+    width: 100%;
     background-color: $colour-primary;
-    color: $colour-secondary;
-
     color: $colour-secondary bold;
-   font-size: 18 bold;
-   box-sizing: border-box;
-   position: fixed;
-   top: 0px;
+    font-size: 18 bold;
+    box-sizing: border-box;
+    position: fixed;
+    justify-items: flex-end;
 
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+  
 }
 
 .card {
@@ -19,3 +22,4 @@
 .card:hover {
     background-color: aqua;
 }
+
