--- a/_layout.scss
+++ b/_layout.scss
@@ -5,8 +5,6 @@
 
 .card {
 
-
-
 width: 259px;
 height: 262px;
 left: 52px;
@@ -14,4 +12,16 @@ top: 1037px;
 
 border: 5px solid #FCDDEC;
 box-sizing: border-box;
+}
+
+@media screen and (min-width 76px) {
+    main {
+        width: 330px;
+    }
+}
+
+@media screen and (min-width: 991px) {
+    main {
+        width: 500px;
+    }
 }
